# bmm

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  back-compat-pr.yml  back-compat.yml  bench-against-main.yml  bench.yml  build.yml  lint.yml  main.yml  pr.yml  publish-crates.yml  release.yml  test.yml
.sqlx/: query-1c0b02b1f64ff8bd5098ce0a3dc5c9d5fd45d0f9d82ac0f1019afa42be42757f.json  query-2f954a29895b8548bc60d3aa4221f2e55eda5df2b23bf283777f0d8d5e6f7ff2.json  query-32b9f31d07b1169bd1867812e6d4f48e581b059226aacafc7fa98921a11e3859.json  query-38730ff957271c38dde4df01ec9a834f2f7020a7fef1a90cfb7b50b336be39f0.json  query-43832b6f671319175a86f2166d2058dae9e40c61f69d636920cb8eee1e84c865.json  query-50b255f70abacc317fea85e16a267f4a5f42c5f93a3f716ae66bf1d62ba95612.json  query-619f6a6c8c5ec5aaee9c4b84c4a3e887498a1e005716340865dacbabc65e8959.json  query-6de3ac85ff145a52e6da8c04e4591bf8327b124d4df082639e9659678f5ed6ab.json  query-709ad88260ac36f91f50615471c80af2e5b70e2fc826dba14b5d87d72fd42bad.json  query-7d4b88a70262a6ec84d9c410c3319ceb9a76b048d9cc9059072a1292bf3e7373.json  query-8070e8e32cbe63a0d693660a99997995903f0b4ce164519e9c63aa9493954398.json  query-815366bbf084b08c967ef4b37e2beebe6c8dc59219e68b06a2f51452d01a38f8.json  query-88ee25dbf315f650925469226db8752c39c1a4b12333277e3199aa7cfa620d70.json  query-8acb56a2510a06ec9abe025576a5bc9767460db754604301575338c6abc06b3c.json  query-8ee6d18f51608bb6ee1cc282a08c378f69c1264b234b39fde6aa0f55560fb55a.json  query-a5178b85a8ff929d31e77b233e1e4d9923fd205a9c66e18d64d197e17663f4f7.json  query-aeb659265958da60f19167db7a3231779d1421aa3dfab649bfa743bcd98df9e3.json  query-ba18cdfe418e8db9fb3f56ff9cffaf07ea3ddcd1b1e2cadb29c703666b85ab55.json  query-cd6979a21eef99aa7c5e7321a45217c62c29c1aa945acd7207831df637d4ce03.json
bench/: bench  bench-against-buku.sh  bench-against-prev-version.sh  bench.sh  generate-data
src/: args.rs  common.rs  errors.rs  handle.rs  main.rs  utils.rs
src/cli/: delete.rs  display.rs  import.rs  list.rs  mod.rs  save.rs  save_all.rs  search.rs  show.rs  tags.rs
src/cli/tags/: delete.rs  list.rs  mod.rs  rename.rs
src/domain/: bookmark.rs  tags.rs
src/persistence/: create.rs  delete.rs  errors.rs  get.rs  init.rs  mod.rs  update.rs
src/persistence/tags/: update.rs
src/service/: fetch.rs
src/static/: import-help.txt
src/tui/: app.rs  commands.rs  common.rs  handle.rs  message.rs  mod.rs  model.rs  run.rs  update.rs  view.rs
src/tui/static/: help.txt
tests/: data_dir_test.rs  delete_test.rs  help_test.rs  import_test.rs  list_test.rs  save_all_test.rs  save_test.rs  search_test.rs  show_test.rs  tags_test.rs
tests/common/: mod.rs
tests/static/import/: valid.json
tests/static/local-server/: simple.html
