[package]
name = "bmm"
version = "0.3.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/bmm"
description = "bmm lets you get to your bookmarks in a flash"
homepage = "https://tools.dhruvs.space/bmm/"
license = "MIT"
keywords = [
    "cli",
    "bookmarks",
    "bookmarks-manager",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "bench",
    "tapes",
]

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.39", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
open = "5.3.2"
ratatui = "0.29.0"
regex = "1.11.1"
select = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tui-input = "0.11.1"
url = { version= "2.5.4", features = ["serde"] }
which = "7.0.3"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "fat"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
