[package]
name = "bmm"
version = "0.3.0"
edition = "2024"
authors = ["Dhruv Thakur"]
repository = "https://github.com/dhth/bmm"
description = "bmm lets you get to your bookmarks in a flash"
homepage = "https://tools.dhruvs.space/bmm/"
license = "MIT"
keywords = [
    "cli",
    "bookmarks",
    "bookmarks-manager",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "bench",
    "tapes",
]

[dependencies]
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
dirs = "6.0.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
open = "5.3.2"
ratatui = "0.29.0"
regex = "1.11.2"
select = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", default-features = false,  features = ["json", "macros", "migrate", "runtime-tokio", "sqlite"] }
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tui-input = "0.14.0"
url = { version= "2.5.4", features = ["serde"] }
which = "8.0.0"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
insta-cmd = "0.6.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
